tests/fail/iterator/optimistic_transaction_db.stderr
error[E0597]: `db` does not live long enough
  --> tests/fail/iterator/optimistic_transaction_db.rs:9:9
   |
7  |     let _iter = {
   |         ----- borrow later stored here
8  |         let db = OptimisticTransactionDB::open_default("foo").unwrap();
   |             -- binding `db` declared here
9  |         db.iterator(IteratorMode::Start)
   |         ^^ borrowed value does not live long enough
10 |     };
   |     - `db` dropped here while still borrowed
